# GatewayHeuristic

./: README.md
GatewayHeuristic/: .cproject  .project  perf.data
GatewayHeuristic/Debug/: GatewayHeuristic  makefile  sources.mk
GatewayHeuristic/Debug/AStar/: subdir.mk
GatewayHeuristic/Debug/Pathfinding/: subdir.mk
GatewayHeuristic/Debug/src/: .gitignore  RunPathfinding.d  subdir.mk
GatewayHeuristic/maps/: map01.map
GatewayHeuristic/maps/bg2/: byzantium.map
GatewayHeuristic/maps/sc1_low_res/: AcrosstheCape.map  ArcticStation.map  Backwoods.map  Backwoods.map~  (+17 more)
GatewayHeuristic/src/: RunPathfinding.cpp
patheye/: .cproject  .gitignore  .project  CMakeLists.txt  UseVala.cmake
patheye/cbits/AStar/: AStar.cpp  AStar.h  AStarNode.cpp  AStarNode.h  StateSpace.h
patheye/cbits/GatewayPathfinding/: GateDistanceStateSpace.cpp  GateDistanceStateSpace.h  Gateway.cpp  Gateway.h  GatewayMap.cpp  GatewayMap.h
patheye/cbits/Pathfinding/: PathfindingStateSpace.cpp  PathfindingStateSpace.h  Tile.cpp  Tile.h  TraversibleMap.cpp  TraversibleMap.h
patheye/cbits/texmap/: lexer.cpp  lexer.hpp  main.cpp  map.hpp  parser.cpp  parser.hpp
patheye/cbits/texnet/: parse.cpp  save.cpp
patheye/cbits/texpath/: lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  path.hpp
patheye/src/: Color.vala  Gate.vala  GateNetwork.vala  GateNetworkParser.vala  Map.vala  MapParser.vala  Path.vala  PathParser.vala  PointF.vala  Segment.vala  main.vala
patheye/src/UI/: AboutDialog.vala  Application.vala  Board.vala  Commands.vala  ControlBar.vala  PathScale.vala  Window.vala
(+36 files in other folders)
